에러 꼐층화 작업 진행 완료