@@ -5,8 +5,8 @@ import com.everyones.lawmaking.common.dto.PartyCongressmanDto;
 import com.everyones.lawmaking.common.dto.SearchCongressmanDto;
 import com.everyones.lawmaking.common.dto.response.*;
 import com.everyones.lawmaking.domain.entity.Congressman;
+import com.everyones.lawmaking.global.error.CongressmanException;
 import com.everyones.lawmaking.repository.CongressmanRepository;
-import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Pageable;
@@ -14,7 +14,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 
 @Service
@@ -23,10 +23,11 @@ import java.util.stream.Collectors;
 @Slf4j
 public class CongressmanService {
     private final CongressmanRepository congressmanRepository;
+    private static final String CONGRESSMAN_ID_KEY_STRING = "congressmanId";
 
     public Congressman findById(String congressmanId) {
         return congressmanRepository.findByIdWithParty(congressmanId)
-                .orElseThrow(() -> new EntityNotFoundException("해당 의원이 존재하지 않습니다."));
+                .orElseThrow(() -> new CongressmanException.CongressmanNotFound(Map.of(CONGRESSMAN_ID_KEY_STRING, congressmanId)));
     }
 
     public CongressmanResponse getCongressman(String congressmanId) {
@@ -35,8 +36,8 @@ public class CongressmanService {
     }
 
     public PartyCongressmanResponse getPartyCongressman(long partyId, Pageable pageable) {
-        var congressman = congressmanRepository.findCongressmanById(partyId, pageable);
-        var pagination = PaginationResponse.fromSlice(congressman);
+        var congressman = congressmanRepository.findByPage(partyId, pageable);
+        var pagination = PaginationResponse.from(congressman);
         var congresssmanList = congressman.stream()
                 .map(PartyCongressmanDto::from)
                 .toList();
@@ -61,10 +62,10 @@ public class CongressmanService {
 
     public SearchDataResponse searchCongressman(String searchWord, Pageable pageable) {
         var congressmanList = congressmanRepository.findBySearchWord(searchWord, pageable);
-        var pagination = PaginationResponse.fromSlice(congressmanList);
+        var pagination = PaginationResponse.from(congressmanList);
         var searchResponse =  congressmanList.stream()
                 .map(SearchCongressmanDto::from)
-                .collect(Collectors.toList());
+                .toList();
 
         return SearchDataResponse.builder()
                 .searchResponse(searchResponse)
